# sabistellar

./: README.md
sabissadminfronte/: debug-signing.ts  package.json  pnpm-lock.yaml
sabissadminfronte/src/: app.css  app.tsx  global.d.ts
sabissadminfronte/src/components/: AdminAuthDialog.tsx  AdminConsole.tsx  AdminEventManager.tsx  AdminImageUrlField.tsx  AdminMarketCreationModal.tsx  (+11 more)
sabissadminfronte/tests/: admin-endpoints.test.ts
sabissbackend/migrations/: 202604190001_align_wallet_auth_network_columns.sql
sabissbackend/tests/: auth_tests.rs
sabissfrontewq/: package.json  pnpm-lock.yaml  vite.config.ts
sabissfrontewq/src/: app.css  app.tsx  global.d.ts
sabissfrontewq/test/: alias-loader.mjs
sabissscontract/: .gitignore  README.md  soroban_info.md
sabissscontract/contracts/sabi_exchange/: Cargo.toml
sabissscontract/contracts/sabi_exchange/src/: access.rs  clients.rs  contract.rs  execution.rs  guards.rs  interface.rs  lib.rs  storage.rs
sabissscontract/contracts/sabi_liquidity_manager/: Cargo.toml
sabissscontract/contracts/sabi_liquidity_manager/src/: clients.rs  contract.rs  interface.rs  lib.rs  storage.rs
sabissscontract/contracts/sabi_neg_risk/: Cargo.toml
sabissscontract/contracts/sabi_neg_risk/src/: access.rs  clients.rs  contract.rs  interface.rs  lib.rs  storage.rs
sabissscontract/deployments/: testnet-modular-freighter12-20260420.env  testnet-modular-fresh-20260420.env  testnet-modular.env  testnet-wallet-factory.env
sabissscontract/scripts/: bootstrap_modular_market.sh  deploy_modular_mvp.sh  deploy_wallet_factory.sh
(+165 files in other folders)
